
23/10/2014

- Bug corrected in vmAPI_lxc: message "Inconsistency detected between VM $vm_name architecture defined in XML ($vm_arch) and rootfs architecture ($rootfs_arch)", the rootfs arch value shown was wrong. 
- Changed the way management interface identifiers are obtained using nmcli. The way used so far does not work well in Ubuntu 14.04.

10/10/2014

- Changed installation scripts to create /usr/share/vnx/aced/vnx-aced-*-latest.tgz link to latest version
- Changed vnx2dot to draw interfaces connected to virbr0 or lxcbr0 as external connections.
- Corrected a bug related with the way files specified in filetrees are copied in LXC VMs. 

7/9/2014

- Added <default> tag and desktop attribute to window configuration files (.cvnx) 
  Example:
     <default win="0,0,600,400" desktop="0" ontop="no"/>
     <vm name="h1" win="0,0,600,400" ontop="yes"/>
- Added <vnx_cfg> tag to specify the windows configuration filename (if not specified VNX looks for a file with the same name as the scenario but with extension .cvnx) 
    Example:
        <vnx_cfg>tutorial_lxc_ubuntu2.cvnx</vnx_cfg>
  Besides, the config file is copied to scenario directory to find it when -s option used

- Added "-n" option to vnx_download_rootfs to eliminate wget progress bars (disturbing when using it inside bootstrap vagrant shellscripts).

26/08/2014

- Added aufs_options parameter to [lxc] section of vnx.conf 

  [lxc]
  aufs_options = 'noxino' # comma separated list of options (without comma at the end)
  
- Added host_passthrough option to [libvirt]. Substitutes   

- Added --download-rootfs option to call vnx_download_rootfs: 'vnx --download-rootfs'

- Added new type of VM: Name spaces based routers (nsrouter). Added tutorial_nsrouter.xml example.     

- VNX bash autocompletion file copied also to /usr/share/bash-completion/completions/ (seems to be the default dir in Ubuntu) apart from /etc/bash_completion.d/
